# youtube_analyzer

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
analyze_api/: .dockerignore  .env.example  Dockerfile  gemini_client.py  main.py  pyproject.toml  youtube_utils.py
analyze_web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
analyze_web/src/: App.tsx  index.css
