[project]
name = "youtube_analyze_video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "google-genai>=1.52.0",
    "load-dotenv>=0.1.0",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
]
